--- a/food/Position.html
+++ b/food/Position.html
@@ -13,11 +13,12 @@
         <div class="child1">
             <img src="https://www.w3schools.com/w3images/architect.jpg" alt="">
 
-<p><b>BR </b> Architects</p>
+            <p><b>BR</b> Architects</p>
+        </div><br>
 
 
-        </div>
         <div class="container2">
+
            <div class="childContainer1">
 
             <div class="child child1">
